# SoulSplitter

./: .editorconfig  .gitignore  .gitmodules  .runsettings  Cargo.toml  Directory.Build.props  LICENSE  README.md  SoulSplitter.sln  SoulSplitter.sln.DotSettings  qodana.yaml  rust-toolchain.toml  soulsplitter.runsettings  update_soulmods.bat  update_soulsmods.bat
.github/: FUNDING.yml
.github/workflows/: build.yml  debug.yml  qodana.yml  qodana_main.yml  sign.yml
Components/: Updates.xml  readme.md
darkscript3/: ds3-common.emedf.json  readme.md  sekiro-common.emedf.json
src/SoulMemory/: Annotations.cs  AnnotationsAttribute.cs  Extensions.cs  FlagWatcher.cs  IBlackscreenRemovable.cs  IGame.cs  ITimeable.cs  README.md  RefreshError.cs  Result.cs  SoulInjecteeClient.cs  SoulMemory.csproj  Timer.cs  Vector3f.cs  VersionAttribute.cs  packages.config
src/SoulMemory.Tests/: SoulMemory.Tests.csproj  packages.config
src/SoulSplitter/: Extensions.cs  Logger.cs  MemeWindow.cs  Migrations.cs  RelayCommand.cs  SoulComponent.cs  SoulComponentFactory.cs  SoulSplitter.cs  SoulSplitter.csproj  SplitterState.cs  Timer.cs  TimerAdapter.cs  TimingType.cs  VersionHelper.cs  XmlSerializableWrapper.cs  packages.config
src/SoulSplitter.Build/: ReplaceTomlVersion.cs  SoulSplitter.Build.csproj  Utils.cs
src/SoulSplitterUIv2/: Extensions.cs  SoulSplitterUIv2.csproj
src/SoulTracker/: App.xaml  App.xaml.cs  AssemblyInfo.cs  ColorToBrushConverter.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  (+3 more)
src/cli_rust/: Cargo.toml
src/cli_rust/src/: lib.rs  main.rs
src/rust_memory/: Cargo.toml  build.rs
src/rust_memory/src/: console.rs  darksouls2.rs  eldenring.rs  lib.rs  state.rs  websocket.rs
src/rust_memory/src/asm/: set_even_flag.asm  update_igt.asm
src/rust_memory/src/darksouls2/: event_key_guide.rs  mod.rs  set_event_flag.rs  unlock_bonfire.rs
src/rust_memory/src/darksouls3/: get_event_flag.rs  set_event_flag.rs
src/rust_memory/src/detours/: mod.rs  set_event_flag.rs
src/rust_memory/src/eldenring/: set_event_flag.rs
src/rust_memory/src/memory/: mod.rs  pattern_scanner.rs  pointer.rs  processes.rs  scan_cache.rs
src/rust_memory/src/native/: linux_process.rs  mod.rs  process.rs  windows_process.rs
src/rust_memory/src/sekiro/: set_event_flag.rs
src/soulmemory-rs/: Cargo.toml  build.rs
src/soulmemory-rs-launcher/: Cargo.toml
src/soulmemory-rs-launcher/src/: main.rs
src/soulmemory-rs-test-window/: Cargo.toml
src/soulmemory-rs-test-window/src/: main.rs
src/soulmemory-rs-test-window/src/support/: imgui_glium_renderer.rs  imgui_winit_support.rs  mod.rs
src/soulmemory-rs/src/: app.rs  glow_window.rs  lib.rs  render_hooks.rs  util.rs  websocket.rs
src/soulmemory-rs/src/asm/: set_even_flag.asm
src/soulmemory-rs/src/darkscript3/: emevd_definition.rs  mod.rs  sekiro_emedf.rs
src/soulmemory-rs/src/darksouls2/: mod.rs
src/soulmemory-rs/src/darksouls2scholar/: mod.rs
src/soulmemory-rs/src/darksouls2vanilla/: set_event_flag.rs
src/soulmemory-rs/src/darksouls3/: mod.rs  set_event_flag.rs
src/soulmemory-rs/src/darksoulsremastered/: darksoulsremastered.rs  mod.rs  set_event_flag.rs
src/soulmemory-rs/src/eldenring/: mod.rs  set_event_flag.rs
src/soulmemory-rs/src/games/: armored_core_6.rs  dark_souls_3.rs  dark_souls_prepare_to_die_edition.rs  dark_souls_remastered.rs  dx_version.rs  elden_ring.rs  game.rs  game_ext.rs  mod.rs  sekiro.rs
src/soulmemory-rs/src/games/Nighreign/: mod.rs
src/soulmemory-rs/src/games/bloodborne/: mod.rs
src/soulmemory-rs/src/games/dark_souls_2_scholar_of_the_first_sin/: buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/dark_souls_2_vanilla/: buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/darksouls3/: buffered_emevd_logger.rs  buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/mock_game/: buffered_emevd_logger.rs  buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/nightreign/: mod.rs
src/soulmemory-rs/src/games/sekiro/: buffered_emevd_logger.rs  emevd.rs  game.rs  mod.rs
src/soulmemory-rs/src/games/traits/: buffered_emevd_logger.rs  buffered_event_flags.rs  mod.rs  player_position.rs
src/soulmemory-rs/src/games/x64/: armored_core_6.rs  dark_souls_remastered.rs  elden_ring.rs  mod.rs
src/soulmemory-rs/src/games/x64/bloodborne/: buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/x64/dark_souls_2_scholar_of_the_first_sin/: buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/x64/darksouls3/: buffered_event_flags.rs  mod.rs
src/soulmemory-rs/src/games/x64/nightreign/: mod.rs
src/soulmemory-rs/src/games/x64/sekiro/: buffered_emevd_logger.rs  buffered_event_flags.rs  chr_dbg_flag.rs  emevd.rs  game.rs  mod.rs  player_position.rs
src/soulmemory-rs/src/games/x86/: dark_souls_prepare_to_die_edition.rs  mod.rs
src/soulmemory-rs/src/games/x86/dark_souls_2_vanilla/: mod.rs
src/soulmemory-rs/src/memory/: mod.rs  pointer.rs  scan_cache.rs
src/soulmemory-rs/src/native/: mod.rs  process.rs  windows_process.rs
src/soulmemory-rs/src/tas/: mod.rs  tas.rs  toggle_mode.rs  xinput.rs
src/soulmemory-rs/src/util/: console.rs  log.rs  mod.rs  server.rs  vector3f.rs
src/soulmemory-rs/src/widgets/: ai_toggle_widget.rs  basic_position_widget.rs  chr_dbg_flags_widget.rs  emevd_logger_widget.rs  event_flag_widget.rs  misc_widget.rs  mod.rs  widget.rs
src/soulmods/: Cargo.toml
src/soulmods/src/: armoredcore6.rs  console.rs  lib.rs  logger.rs
src/soulmods/src/games/: darksouls2scholarofthefirstsin.rs  mod.rs
src/soulmods/src/games/x64/: armoredcore6.rs  darksouls1remastered.rs  darksouls2scholarofthefirstsin.rs  darksouls3.rs  eldenring.rs  mod.rs  nightreign.rs  sekiro.rs
src/soulmods/src/games/x64/bloodborne/: mod.rs
src/soulmods/src/games/x64/darksouls3/: migt.rs  mod.rs
src/soulmods/src/games/x64/nightreign/: mod.rs
src/soulmods/src/games/x86/: darksouls1.rs  mod.rs
src/soulmods/src/tests/: mod.rs  utils.rs
src/soulmods/src/tests/x64/: migt_tests.rs  mod.rs
src/soulmods/src/util/: assembler.rs  globals.rs  memory.rs  mod.rs  version.rs
(+894 files in other folders)
