[package]
name = "cli_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "soulinjectee"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "tlhelp32", "consoleapi", "processenv"] }
detour = "0.8.1"

[dependencies.rust_memory]
path = "../rust_memory"