[package]
name = "rust_memory"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.73"

[dependencies]
#to read active processes
sysinfo = "0.23.5"
detour = "0.8.1"
chrono = "0.4.19"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "tlhelp32"] }
