[package]
name = "soulmemory-rs-launcher"
edition = "2024"
authors = ["Frank van der Stam"]
description = "launcher and injector for soulmemory-rs"
homepage = "https://github.com/FrankvdStam/SoulSplitter"
repository = "https://github.com/FrankvdStam/SoulSplitter"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mem-rs = "0.2.2"
#mem-rs = { path="C:/projects/mem-rs" }