[package]
name = "soulmemory-rs-test-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.10.1"
glium = { version = "0.34.0", default-features = true, features = ["glutin_backend"] }
image = "0.25.1"
imgui = "0.12.0"
imgui-glium-renderer = "0.12.0"

winit = { version = "0.29.15", default-features = false }

soulmemory-rs = { path = "../soulmemory-rs" }

# Pin indirect dependency scoped-tls to 1.0.0
# as 1.0.1 bumped MSRV to 1.59
# Used only in
# imgui-examples -> glium -> glutin -> wayland-client -> scoped-tls
# so not worth bumping MSRV for this basically to keep CI happy
# FIXME: Remove this for imgui-rs v0.10 and bump MSRV
#scoped-tls = "=1.0.0"
rand = "0.9.0-alpha.1"
chrono = "0.4.22"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse"
]