[package]
name = "soulmemory-rs-test-window"
edition = "2024"
authors = ["Frank van der Stam"]
description = "Test window to develop soulmemory-rs without constantly re-injecting"
homepage = "https://github.com/FrankvdStam/SoulSplitter"
repository = "https://github.com/FrankvdStam/SoulSplitter"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"

glow = "0.14"

glutin = "0.32"
glutin-winit = "0.5"

raw-window-handle = "0.6.0"
winit = { version = "0.30", features = ["rwh_06"] }
copypasta = "0.10.1"

soulmemory-rs = { path = "../soulmemory-rs" }

rand = "0.9.0"
chrono = "0.4.40"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse"
]