[package]
name = "soulmemory-rs"
edition = "2021"
authors = ["Frank van der Stam"]
description = "Injectable UI with event flag loging"
homepage = "https://github.com/FrankvdStam/SoulSplitter"
repository = "https://github.com/FrankvdStam/SoulSplitter"
license-file = "../../LICENSE"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ilhook = "2.1.0"

mem-rs = "0.2.1"
#mem-rs = { path="C:/projects/mem-rs" }
chrono = "0.4.38"
lazy_static = "1.5.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

imgui = { version = "0.12.0", features = ["tables-api"] }
hudhook = "0.8.0"

log = "0.4.22"
log4rs = {version = "1.3.0", features = ["all_components" ] }
rand = "0.9.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse"
]
