[package]
name = "soulmemory-rs"
version = "2.0.32"
edition = "2021"
authors = ["Frank van der Stam"]
description = "Injectable UI with event flag loging"
homepage = "https://github.com/FrankvdStam/SoulSplitter"
repository = "https://github.com/FrankvdStam/SoulSplitter"
license-file = "../../LICENSE"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ilhook = "2.1.1"

mem-rs = "0.2.1"
#mem-rs = { path="C:/projects/mem-rs" }
chrono = "0.4.40"
lazy_static = "1.5.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

copypasta = "0.10.1"
hudhook = "0.8.0"

log = "0.4.27"
log4rs = {version = "1.3.0", features = ["all_components" ] }
rand = "0.9.0"

imgui = { version = "0.12.0", features = ["tables-api"] }
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"

glow = "0.14"

glutin = "0.32"
glutin-winit = "0.5"

raw-window-handle = "0.6.0"
winit = { version = "0.30", features = ["rwh_06"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse"
]
