[package]
name = "soulmods"
edition = "2021"
authors = ["Frank van der Stam"]
description = "Injectable game modifications use in speedruns"
homepage = "https://github.com/FrankvdStam/SoulSplitter"
repository = "https://github.com/FrankvdStam/SoulSplitter"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
ilhook = "2.1.0"

mem-rs = "0.1.7"
#mem-rs = { path="C:/projects/mem-rs" }
lazy_static = "1.4.0"

log = "0.4.21"
log4rs = {version = "1.3.0", features = ["all_components" ] }

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
]

